[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytapi-kit"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "davisj95", email = "jakealthor+github@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas>=2.1",
  "google-auth>=2.28",
  "google-auth-oauthlib>=1.2",
  "requests>=2.32",
  "urllib3>=2.2",
]

[project.urls]
Documentation = "https://github.com/davisj95/ytapi-kit#readme"
Issues = "https://github.com/davisj95/ytapi-kit/issues"
Source = "https://github.com/davisj95/ytapi-kit"

[tool.hatch.version]
path = "src/ytapi_kit/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ytapi_kit tests}"

[tool.coverage.run]
source_pkgs = ["ytapi_kit", "tests"]
branch = true
parallel = true
omit = [
  "src/ytapi_kit/__about__.py",
]

[tool.coverage.paths]
ytapi_kit = ["src/ytapi_kit", "*/ytapi-kit/src/ytapi_kit"]
tests = ["tests", "*/ytapi-kit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]